# iterm2-remote

./: .gitignore  README.md  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-connection-authentication/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-03-PLAN.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-terminal-iterm2/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-05-PLAN.md  02-05-SUMMARY.md  02-CONTEXT.md  02-VERIFICATION.md
.planning/phases/04-relay-server/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-04-PLAN.md  (+4 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
homebrew/Casks/: terminal-remote.rb
mac-client/: Cargo.toml  Info.plist  README.md  build-bundle.sh  coprocess-bridge.sh  iterm-bridge.py  package.json  pnpm-lock.yaml  requirements.txt  tsconfig.json
mac-client/src/: app.rs  connection.ts  index.ts  iterm-bridge.ts  lib.rs  main.rs  protocol.rs  session-manager.ts  state-machine.ts
mac-client/src/ipc/: mod.rs  session.rs
mac-client/src/pty/: mod.rs
mac-client/src/relay/: connection.rs  mod.rs
mac-client/src/tmux/: mod.rs
relay-server-v2/: Cargo.toml  test-ws.sh
relay-server-v2/src/: assets.rs  main.rs  protocol.rs  state.rs
relay-server-v2/src/handlers/: ws.rs
relay-server/assets/: index.html
relay-server/src/: assets.rs  protocol.rs  session.rs  state.rs
relay-server/web-ui/: .env.example  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  server.js  tsconfig.json  vite.config.ts
scripts/: install.sh  setup.sh  start.sh  uninstall.sh
shell-integration/: README.md  init.bash  init.fish  init.zsh  install.sh
src/relay/: server.ts
src/routes/: +layout.ts  +page.svelte
src/shared/: constants.ts  protocol.ts
(+73 files in other folders)
